<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:fontFamily="inter">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:drawableStart="@drawable/icon_back"
        android:drawablePadding="5dp"
        android:text="Kelola"
        android:textColor="#161E54"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="90dp"
        android:text="@string/kategori_jasa_satuan"
        android:textColor="#161E54"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="361dp"
        android:layout_height="62dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/bg_search"
        android:padding="12dp"
        android:inputType="text"
        android:hint="Cari Kategori, Jasa, dan Satuan..."
        android:textColorHint="#B3B3B3"
        tools:ignore="MissingConstraints"
        android:drawableEnd="@drawable/icon_search"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="190dp"
        android:text="Kategori"
        android:textColor="#939393"
        android:textSize="12sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="10dp"
        app:strokeColor="#939393"
        app:strokeWidth="1dp"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="190dp"
        android:text="Jasa"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:backgroundTint="#161E54"
        app:cornerRadius="10dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginStart="275dp"
        android:layout_marginTop="190dp"
        android:text="Satuan"
        android:textColor="#939393"
        android:textSize="12sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#939393"
        app:strokeWidth="1dp"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/tambahjasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="256dp"
        android:text="@string/tambah_jasa"
        android:textColor="#161E54"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/cardForm"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tambahjasa"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="232dp"
            android:layout_height="19dp"
            android:text="@string/pilih_kategori"
            android:textColor="#161E54"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/spinnerKategori"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:entries="@array/kategori_jasa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="232dp"
            android:layout_height="19dp"
            android:layout_marginTop="12dp"
            android:text="@string/nama_jasa"
            android:textColor="#161E54"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/inputNama"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:hint="Masukkan Nama Jasa di sini.."
            android:textColorHint="#B7B3B3B3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSimpan"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="Simpan"
            android:textSize="16sp"
            app:backgroundTint="#161E54"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/HeaderTable"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardForm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="121dp"
                android:layout_height="31dp"
                android:gravity="center"
                android:text="Nama Jasa"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="121dp"
                android:layout_height="31dp"
                android:gravity="center"
                android:text="@string/btnkategori"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="121dp"
                android:layout_height="31dp"
                android:gravity="center"
                android:text="@string/aksi"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <TextView
            android:id="@+id/txtEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Belum ada jasa"
            android:gravity="center"
            android:textSize="16sp"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>