<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="inter"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelola"
        android:textColor="#161E54"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="60dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kategori_jasa_satuan"
        android:textColor="#161E54"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="90dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="361dp"
        android:layout_height="62dp"
        android:background="@android:drawable/edit_text"
        android:hint="Cari kategori, jasa, satuan..."
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:textColorHint="#B3B3B3"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:background="#161E54"
        android:backgroundTint="#161E54"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/kategori"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        app:iconTint="#9C27B0"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="190dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:background="#161E54"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="Jasa"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        app:cornerRadius="5dp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="190dp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:colorbackground="#161E54"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="Satuan"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="190dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_jasa"
        android:textColor="#161E54"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="241dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="232dp"
        android:layout_height="19dp"
        android:text="Pilih Kategori *"
        android:textColor="#161E54"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="293dp"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="318dp"
        android:layout_height="35dp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="322dp" />

    <TextView
        android:layout_width="232dp"
        android:layout_height="19dp"
        android:text="Pilih Jasa *"
        android:textColor="#161E54"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="380dp"/>

    <EditText
        android:layout_width="318dp"
        android:layout_height="35dp"
        android:background="@android:drawable/edit_text"
        android:hint="Masukkan nama jasa disini..."
        android:paddingStart="12dp"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="405dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:text="Simpan"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="455dp" />

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="309dp"
        android:background="#FFFFFF"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:padding="0dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="560dp">

        <TextView
            android:layout_width="121dp"
            android:layout_height="31dp"
            android:text="Nama Jasa"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="121dp"
            android:layout_height="31dp"
            android:text="Kategori"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="121dp"
            android:layout_height="31dp"
            android:text="Aksi"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>